--- a/templates/main/movie_detail.html
+++ b/templates/main/movie_detail.html
@@ -1,5 +1,7 @@
-<h1>{{ Movie.title }}</h1>
 
 <div>
-    <img src="{{Movie.img}}" alt="샹치">
+    <h1>{{ Movie.title }}</h1>
+    <h2>{{Movie.content}}</h2>
+    <h2>{{Movie.img.path}}</h2>
+    <img src="{{Movie.img.url}}" alt="a">
 </div>
