데이터베이스에 country라는 column 추가함

--- a/templates/main/movie_detail.html
+++ b/templates/main/movie_detail.html
@@ -1,7 +1,8 @@
 
 <div>
     <h1>{{ Movie.title }}</h1>
-    <h2>{{Movie.content}}</h2>
-    <h2>{{Movie.img.path}}</h2>
+    <h2>{{ Movie.open_movie }}</h2>
+    <h2>{{ Movie.content}}</h2>
     <img src="{{Movie.img.url}}" alt="a">
+
 </div>
