--- a/templates/main/movie_detail.html
+++ b/templates/main/movie_detail.html
@@ -1,4 +1,5 @@
-
+{% extends 'base.html' %}
+{% block content %}
 <div>
     <h1>{{ Movie.title }}</h1>
     <h2>{{ Movie.open_movie }}</h2>
@@ -6,3 +7,4 @@
     <img src="{{Movie.img.url}}" alt="a">
 
 </div>
+{% endblock %}
