--- a/templates/common/user_register.html
+++ b/templates/common/user_register.html
@@ -7,56 +7,70 @@
             <h4>계정생성</h4>
         </div>
         <div class="col-8 text-right">
-            <span>또는 <a href="/">로그인 하세요.</a></span>
+            <span>또는 <a href="{% url 'common:login' %}">로그인 하세요.</a></span>
         </div>
     </div>
     <form method="post" class="post-form" action="{% url 'common:user_register' %}">
         {% csrf_token %}
-        {% include "form_errors.html" %}
         <!-- {% for form in forms %}
+        {{form.errors}}
+        {% endfor %} -->
+        {% include "form_errors.html" %}
+        <!-- {{forms.as_p}} -->
+        {% for form in forms %}
         <div class ="form-group">
-            <label for ="{{form.id_for_label}}">{{form.label}}</label>
+            <label for ="{{form.auto_id}}">{{form.label}}</label>
             {{form}}
         </div>
-        {% endfor %} -->
+        {% endfor %}
+<!--  
         <div class="form-group">
             <label for="user_id">아이디</label>
-            <input type="text" class="form-control" name="user_id" id="user_id">
+            <input type="text" placeholder="아이디를 입력하시오" class="form-control" name="user_id" id="user_id"
+            value="={{form.user_id.value|default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="password1">비밀번호</label>
-            <input type="password" class="form-control" name="password1" id="password1">
+            <input type="password" class="form-control" name="password1" id="password1"
+            value="={{form.password1.value|default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="password2">비밀번호 확인</label>
-            <input type="password" class="form-control" name="password2" id="password2">
+            <input type="password" class="form-control" name="password2" id="password2"
+            value="={{form.password2.value|default_if_none:''}}">
         </div>
-        <div class='form-group'>
+        <div class="form-group">
             <label for="username">이름</label>
-            <input type="text" class="form-control" name="username" id="username">
+            <input type="text" class="form-control" name="username" id="username"
+            value="={{form.username.value|default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="gender">성별</label>
-            <input type="text" class="form-control" name="gender" id="gender">
-        </div>
-        <div class="form-group">
-            <label for="email">이메일</label>
-            <input type="email" class="form-control" name="email" id="email">
+            <input type="text" class="form-control" name="gender" id="gender"
+            value="={{form.gender.value|default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="age">나이</label>
-            <input type="text" class="form-control" name="age" id="age">
+            <input type="number" class="form-control" name="age" id="age"
+            value="={{form.age.value|default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="phone_number">핸드폰번호</label>
-            <input type="text" class="form-control" name="phone_number" id="phone_number">
+            <input type="text" class="form-control" name="phone_number" id="phone_number"
+            value="={{form.phone_number.value|default_if_none:''}}">
+        </div>
+        <div class="form-group">
+            <label for="email">이메일</label>
+            <input type="email" class="form-control" name="email" id="email"
+            value="={{form.email.value|default_if_none:''}}">
         </div>
         <div class="form-group">
             <label for="address">주소</label>
-            <input type="text" class="form-control" name="address" id="address">
-        </div>
+            <input type="text" class="form-control" name="address" id="address"
+            value="={{form.address.value|default_if_none:''}}">
+        </div> -->
        
-        <button type="submit" class="btn btn-primary">생성하기</button>
+        <button type="submit" class="btn btn-primary" value="register">생성하기</button>
     </form>
 </div>
 {% endblock %}
