--- a/templates/form_errors.html
+++ b/templates/form_errors.html
@@ -1,15 +1,15 @@
-{% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
+{% if forms.errors %}
+    {% for field in forms %}
+        {% for error in field.errors %}  <!-- 필드 오류를 출력한다. -->
             <div class="alert alert-danger">
-                <strong>{{field.label}}</strong>
-                {{error}}
+                <strong>{{ field.label }}</strong>
+                {{ error }}
             </div>
         {% endfor %}
     {% endfor %}
-    {% for error in form.non_field_errors %}
-        <div class ="alert alert-danger">
-            <strong>{{error}}</strong>
+    {% for error in form.non_field_errors %}   <!-- 넌필드 오류를 출력한다. -->
+        <div class="alert alert-danger">
+            <strong>{{ error }}</strong>
         </div>
     {% endfor %}
 {% endif %}
