--- a/templates/common/user_register.html
+++ b/templates/common/user_register.html
@@ -12,19 +12,15 @@
     </div>
     <form method="post" class="post-form" action="{% url 'common:user_register' %}">
         {% csrf_token %}
-        <!-- {% for form in forms %}
-        {{form.errors}}
-        {% endfor %} -->
         {% include "form_errors.html" %}
-        <!-- {{forms.as_p}} -->
         {% for form in forms %}
         <div class ="form-group">
             <label for ="{{form.auto_id}}">{{form.label}}</label>
             {{form}}
         </div>
         {% endfor %}
-<!--  
-        <div class="form-group">
+ 
+        <!-- <div class="form-group">
             <label for="user_id">아이디</label>
             <input type="text" placeholder="아이디를 입력하시오" class="form-control" name="user_id" id="user_id"
             value="={{form.user_id.value|default_if_none:''}}">
