1006 로그인 세션 구현 and db 데이터베이스 크롤링 데이터 추가

--- a/templates/main/movie_detail.html
+++ b/templates/main/movie_detail.html
@@ -4,7 +4,7 @@
     <h1>{{ Movie.title }}</h1>
     <h2>{{ Movie.open_movie }}</h2>
     <h2>{{ Movie.content}}</h2>
-    <img src="{{Movie.img.url}}" alt="a">
+    <img src="{{Movie.img}}" class='img-fluid ' alt="a">
 
 </div>
 {% endblock %}
