1010 성별 선택 탬플릿 바꾸기

--- a/templates/main/movie_detail.html
+++ b/templates/main/movie_detail.html
@@ -4,7 +4,7 @@
     <h1>{{ Movie.title }}</h1>
     <h2>{{ Movie.open_movie }}</h2>
     <h2>{{ Movie.content}}</h2>
-    <img src="{{Movie.img}}" class='img-fluid ' alt="a">
+    <img src="{{Movie.img}}" style="width: 300px; height: 300px;" alt="a">
 
 </div>
 {% endblock %}
