--- a/templates/common/user_login.html
+++ b/templates/common/user_login.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 <div class ="container my-3">
-    <!------------------------------[edit---------------------------]-->
     <div class = "row">
         <div class="col-4">
             <h4>로그인</h4>
@@ -25,14 +24,16 @@
         <div class="form-group">
             <label for="username">사용자ID</label>
             <input type="text" class="form-control" name="username" id="username"
-            value="{{ form.username.value|default_if_none:'' }}">
+            required=True value="{{ form.username.value|default_if_none:'' }}">
         </div> 
         <div class="form-group">
             <label for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" id="password" value="{{ form.password.value|default_if_none:''}}">
+            <input type="password" class="form-control" name="password" id="password" 
+            required=True value="{{ form.password.value|default_if_none:''}}">
         </div> -->
-        
+    </br>
         <button type = "submit" class="btn btn-primary">로그인</button>
+
     </form>
 </div> 
 
