--- a/templates/common/user_register.html
+++ b/templates/common/user_register.html
@@ -22,48 +22,44 @@
  
         <!-- <div class="form-group">
             <label for="user_id">아이디</label>
-            <input type="text" placeholder="아이디를 입력하시오" class="form-control" name="user_id" id="user_id"
-            value="={{form.user_id.value|default_if_none:''}}">
+            <input type="text" class="form-control" name="user_id" value="{{form.user_id.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="password1">비밀번호</label>
-            <input type="password" class="form-control" name="password1" id="password1"
-            value="={{form.password1.value|default_if_none:''}}">
+            <input type="password" class="form-control" name="password1" value="{{form.password1.value|default_if_none:'' }}" >
         </div>
         <div class="form-group">
             <label for="password2">비밀번호 확인</label>
-            <input type="password" class="form-control" name="password2" id="password2"
-            value="={{form.password2.value|default_if_none:''}}">
+            <input type="password"class="form-control" name="password2" value="{{form.password2.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="username">이름</label>
-            <input type="text" class="form-control" name="username" id="username"
-            value="={{form.username.value|default_if_none:''}}">
+            <input type="text" class="form-control" name="username" value="{{form.username.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="gender">성별</label>
-            <input type="text" class="form-control" name="gender" id="gender"
-            value="={{form.gender.value|default_if_none:''}}">
+        </br>
+            <select class="form-control" aria-label=".form-select-sm example">
+                <option selected>성별을 고르시오</option>
+                <option value="male">남</option>
+                <option value="female">여</option>
+            </select>
         </div>
         <div class="form-group">
             <label for="age">나이</label>
-            <input type="number" class="form-control" name="age" id="age"
-            value="={{form.age.value|default_if_none:''}}">
+            <input type="number" class="form-control" name="age">
         </div>
         <div class="form-group">
             <label for="phone_number">핸드폰번호</label>
-            <input type="text" class="form-control" name="phone_number" id="phone_number"
-            value="={{form.phone_number.value|default_if_none:''}}">
+            <input type="text" class="form-control" name="phone_number">
         </div>
         <div class="form-group">
             <label for="email">이메일</label>
-            <input type="email" class="form-control" name="email" id="email"
-            value="={{form.email.value|default_if_none:''}}">
+            <input type="email" class="form-control" name="email">
         </div>
         <div class="form-group">
             <label for="address">주소</label>
-            <input type="text" class="form-control" name="address" id="address"
-            value="={{form.address.value|default_if_none:''}}">
+            <input type="text" class="form-control" name="address">
         </div> -->
        
         <button type="submit" class="btn btn-primary" value="register">생성하기</button>
