--- a/templates/form_errors.html
+++ b/templates/form_errors.html
@@ -1,9 +1,9 @@
 {% if forms.errors %}
     {% for field in forms %}
-        {% for error in field.errors %}  <!-- 필드 오류를 출력한다. -->
+        {% for error in field.errors %}  
             <div class="alert alert-danger">
-                <strong>{{ field.label }}</strong>
-                {{ error }}
+                <strong>{{field.label}}</strong>
+                <strong>{{ error }}</strong>
             </div>
         {% endfor %}
     {% endfor %}
