--- a/templates/main/movie_list.html
+++ b/templates/main/movie_list.html
@@ -20,7 +20,7 @@
         {% endfor %}
         {% else %}
         <tr>
-            <td colspan="2">질문이 없습니다.</td>
+            <td colspan="2">영화리스트가 없습니다.</td>
         </tr>
         {% endif %}
         </tbody>
