--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -10,19 +10,12 @@
             <span>또는 <a href="{% url 'common:login' %}">로그인 하세요.</a></span>
         </div>
     </div>
-    <form method="post" class="post-form" action="{% url 'common:user_register' %}">
+    <form method="post" class="post-form" action="{% url 'common:signup' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        {% for form in forms %}
-        <div class ="form-group">
-            <label for ="{{form.auto_id}}">{{form.label}}</label>
-            {{form}}
-        </div>
-        {% endfor %}
- 
-        <!-- <div class="form-group">
-            <label for="user_id">아이디</label>
-            <input type="text" class="form-control" name="user_id" value="{{form.user_id.value|default_if_none:'' }}">
+        <div class="form-group">
+            <label for="email">이메일</label>
+            <input type="email" class="form-control" name="email" value="{{form.email.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="password1">비밀번호</label>
@@ -33,13 +26,13 @@
             <input type="password"class="form-control" name="password2" value="{{form.password2.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
-            <label for="username">이름</label>
-            <input type="text" class="form-control" name="username" value="{{form.username.value|default_if_none:'' }}">
+            <label for="name">이름</label>
+            <input type="text" class="form-control" name="name" value="{{form.name.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="gender">성별</label>
-        </br>
-            <select class="form-control" aria-label=".form-select-sm example">
+            <!-- <input type="text" class="form-control" name="name" value="{{form.gender.value|default_if_none:'' }}"> -->
+            <select name="gender" class="form-control" aria-label="form-select-sm example">
                 <option selected>성별을 고르시오</option>
                 <option value="male">남</option>
                 <option value="female">여</option>
@@ -47,22 +40,19 @@
         </div>
         <div class="form-group">
             <label for="age">나이</label>
-            <input type="number" class="form-control" name="age">
+            <input type="number" class="form-control" name="age" value="{{form.age.value|default_if_none:'' }}">
         </div>
         <div class="form-group">
             <label for="phone_number">핸드폰번호</label>
-            <input type="text" class="form-control" name="phone_number">
+            <input type="text" class="form-control" name="phone_number" value="{{form.phone_number.value|default_if_none:'' }}">
         </div>
-        <div class="form-group">
-            <label for="email">이메일</label>
-            <input type="email" class="form-control" name="email">
-        </div>
+
         <div class="form-group">
             <label for="address">주소</label>
             <input type="text" class="form-control" name="address">
-        </div> -->
+        </div>
        
-        <button type="submit" class="btn btn-primary" value="register">생성하기</button>
+        <button type="submit" class="btn btn-primary">생성하기</button>
     </form>
 </div>
 {% endblock %}
