--- a/templates/common/user_login.html
+++ b/templates/common/user_login.html
@@ -7,30 +7,24 @@
             <h4>로그인</h4>
         </div>
         <div class="col-8 text-right">
-            <span>또는 <a href="{% url 'common:user_register' %}">계정을 만드세요.</a></span>
+            <span>또는 <a href="{% url 'common:signup' %}">계정을 만드세요.</a></span>
         </div>
     </div>
     <form method="post" class="post-form" action="{% url 'common:login' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        {% for form in forms %}
-        <div>
-            <label for = "{{ form.auto_id}}"> {{form.label}}</label>
-            {{ form }}
-        </div>
-        {% endfor %}
-        <!-- <input type="hidden" name="next" value="{{next}}">
+        <input type="hidden" name="next" value="{{next}}">
      
         <div class="form-group">
-            <label for="username">사용자ID</label>
-            <input type="text" class="form-control" name="username" id="username"
+            <label for="email">이메일</label>
+            <input type="text" class="form-control" name="email" id="email"
             required=True value="{{ form.username.value|default_if_none:'' }}">
         </div> 
         <div class="form-group">
             <label for="password">비밀번호</label>
             <input type="password" class="form-control" name="password" id="password" 
             required=True value="{{ form.password.value|default_if_none:''}}">
-        </div> -->
+        </div>
     </br>
         <button type = "submit" class="btn btn-primary">로그인</button>
 
