--- a/templates/common/info.html
+++ b/templates/common/info.html
@@ -1,15 +1,38 @@
 {% extends "base.html" %}
-{% block title %}<title>My Page</title>{% endblock %}
+{% block title %}<title>회원 가입</title>{% endblock %}
 {% block content %}
-
-<h1>{{User.id}}</h1>
-<ul>
-    <li><p>{{User.name}}</p></li>
-    <li><p>{{User.email}}</p></li>
-    <li><p>{{User.phone_number}}</p></li>
-    <li><p>{{User.address}}</p></li>
-</ul>
-<a href ="{% url 'common:update' %}" type="button" class="btn btn-primary">수정</a>
-<a href = "{% url 'common:delete' %}" type="button" class="btn btn-primary">삭제</a>
-
-{%endblock%}
+<div class="container my-3">
+    <form method="get" class="post-form" action="{% url 'common:update' %}">
+        {% csrf_token %}
+        <!-- {% include "form_errors.html" %} -->
+        <div class="form-group">
+            <label for="email">이메일</label>
+            <span class = "form-control">{{User.email}}</span>
+        </div>
+        <div class="form-group">
+            <label for="name">이름</label>
+            <span class = "form-control">{{User.name}}</span>
+        </div>
+        <div class="form-group">
+            <label for="gender">성별</label>
+            <span class = "form-control">{{User.gender}}</span>
+        </div>
+        <div class="form-group">
+            <label for="age">나이</label>
+            <span class = "form-control">{{User.age}}</span>
+        </div>
+        <div class="form-group">
+            <label for="phone_number">핸드폰번호</label>
+            <span class = "form-control">{{User.phone_number}}</span>
+            
+        </div>
+        
+        <div class="form-group">
+            <label for="address">주소</label>
+            <span class = "form-control">{{User.address}}</span>
+        </div>
+       
+        <button type="submit" class="btn btn-primary">수정하기</button>
+    </form>
+</div>
+{% endblock %}
