--- a/templates/common/user_login.html
+++ b/templates/common/user_login.html
@@ -13,17 +13,17 @@
     <form method="post" class="post-form" action="{% url 'common:login' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <input type="hidden" name="next" value="{{next}}">
+        <!-- <input type="hidden" name="next" value="{{next}}"> -->
      
         <div class="form-group">
             <label for="email">이메일</label>
             <input type="text" class="form-control" name="email" id="email"
-            required=True value="{{ form.username.value|default_if_none:'' }}">
+            required=True value="{{ forms.email.value|default_if_none:'' }}">
         </div> 
         <div class="form-group">
             <label for="password">비밀번호</label>
             <input type="password" class="form-control" name="password" id="password" 
-            required=True value="{{ form.password.value|default_if_none:''}}">
+            required=True value="{{ forms.password.value|default_if_none:''}}">
         </div>
     </br>
         <button type = "submit" class="btn btn-primary">로그인</button>
