--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,18 @@
   </head>
   <body>
     {% include "navbar.html" %}
+    {% include "messages.html" %}
     <!-- 기본 템플릿 안에 삽입될 내용 Start -->
     {% block content %} 
     {% endblock %}
     <!-- 기본 템플릿 안에 삽입될 내용 End -->
     <!-- jQuery JS -->
+    <script src="{% static 'jquery-3.4.1.min.js' %}"></script>
+    <!-- Bootstrap JS -->
+    <script src="{% static 'bootstrap.min.js' %}"></script>
+    <!-- 자바스크립트 Start -->
+    {% block script %}
+    {% endblock %}
+    <!-- 자바스크립트 End -->
   </body>
 </html>
